# trace

./: CMakeLists.txt  README.md  config.cmake.in
.github/workflows/: cmake-multi-platform.yml
include/: TRC.h  TRCFile.h  TRCTrace.h  TRCType.h
src/: TRCFile.cpp  TRCTrace.cpp  TRCType.cpp
test/: CMakeLists.txt  basic.cpp  common.hpp  file.cpp  object.cpp  test.cpp  type.cpp
